# system_integration

./: .gitignore
02.Data_Files/: app.js  me.csv  me.json  me.txt  me.xml  package-lock.json  readAndParseFiles.js  readAndParseFiles.py  txt.txt
02.Data_Files/node_server/: app.js  readAndParseFiles.js
02.Data_Files/python_server/: main.py  readAndParseFiles.py
03.Modules/: index.html
03.Modules/html_with_modules/: myModule.js
03.Modules/node_commonjs_modules/: myModule.js
03.Modules/node_es_module/: index.js
04_Encoding_Decoding/node/: index.js
04_Encoding_Decoding/python/: main.py
05.Python_Enviroment/03._Poetry/: pyproject.toml
06.Server/python_server/: main.py  pyproject.toml
08.Server-To-Server/node/: app.js  package.json
08.Server-To-Server/python/: main.py  pyproject.toml
09.Enviroment_Variables/node/: index.js  package.json
09.Enviroment_Variables/python/: main.py  pyproject.toml
10.Date/node_date/: index.js
10.Date/python_date/: main.py
11.Short_Polling/node/: app.js
12.Long_Polling/node/: app.js
13.Server-sent_Events/node/: app.js
13.Server-sent_Events/python-sse/: main.py  pyproject.toml
15.Github_Webhooks/05a.IntegratorWebhook/: app.js  package.json
15.Github_Webhooks/05a.WebhookSystem/: app.js  webhooks.db
15.Github_Webhooks/node-webhooks/: app.js  package.json
15.Github_Webhooks/python-webhooks/: main.py  pyproject.toml
Assignments/05a.IntegratorWebhook/: package-lock.json  package.json
Assignments/05a.WebhookSystem/: app.js  database.js  package-lock.json  package.json
(+12 files in other folders)
