[tool.poetry]
name = "03-poetry"
version = "0.1.0"
description = ""
authors = ["asgerbirk <asger.birk@gmail.com>"]
readme = "README.md"
packages = [{include = "03"}]

[tool.poetry.dependencies]
python = "^3.12"
emoji = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
